import("//build/lite/config/component/lite_component.gni")

lite_component("rayawa_app") {
    features = [
        "hello:hello",
        "traffic_light:traffic_light",
        "colorful_light:colorful_light",
        "environment:environment",
        "at_command:at_command"

        # 注：以上程序只能同时运行一个，需注释掉不运行的程序
    ]
}