static_library("class4") {
    sources = [
        #智慧交通
        #"light.c",    #灯单独
        #"traffic.c",  #交通灯
        #"ability.c",  #多线程
        #"button.c",   #按键识别
        #"control.c",  #按钮控制交通灯


        #智慧家居
        #"beep.c",     #蜂鸣器单独
        #"music.c",    #音乐播放
        "led.c",      #混合音乐led
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/include",
    ]
}